--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           <a href="https://x.com/boysclubinsol?s=21" data-w-id="1d7c51b5-4816-59bc-69e9-5c7e0e9a91be" class="nav__link is--4 w-nav-link" style="    font-family: 'Gulfsdisplay expanded', sans-serif;
           color: white;
       ">TWITTER</a>
-          <a href="https://t.me/JensenHuang" data-w-id="1d7c51b5-4816-59bc-69e9-5c7e0e9a91be" class="nav__link is--4 w-nav-link" style="    font-family: 'Gulfsdisplay expanded', sans-serif;
+          <a href="https://t.me/JensenHuangSol" data-w-id="1d7c51b5-4816-59bc-69e9-5c7e0e9a91be" class="nav__link is--4 w-nav-link" style="    font-family: 'Gulfsdisplay expanded', sans-serif;
           color: white;
       ">TELEGRAM</a>
 
@@ -420,7 +420,7 @@
           
           <div class="hero__content__top">
             <div class="heading__wrappers">
-              <h1 style="font-size: 65px;" data-w-id="24430503-01b4-7c6c-bd89-bd71c5bc3e0f" class="heading__one">JensenHuang</h1>
+              <h1 style="font-size: 50px; margin-top: -20px;" data-w-id="24430503-01b4-7c6c-bd89-bd71c5bc3e0f" class="heading__one"></h1>
 
             </div>
 
@@ -630,7 +630,7 @@
 
             <div class="about__content">
               <div class="about__content__one">
-                <h1 class="heading__about">JensenHuang</h1>
+                <h1 class="heading__about" >JensenHuang</h1>
               </div>
             </div>
 
@@ -964,7 +964,7 @@
               <div class="follow__content__social">
                 <div class="social__media__wrapper">
                   <div class="social__media__icon__wrapper is--transparent is--two">
-                    <a href="https://t.me/JensenHuang"><img src="images/tg.svg" loading="lazy" alt="" class="social__icon__image"></a>
+                    <a href="https://t.me/JensenHuangSol"><img src="images/tg.svg" loading="lazy" alt="" class="social__icon__image"></a>
                     
                   </div>
                   <div class="social__media__icon__wrapper is--transparent is--two">
