--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
     <div data-collapse="medium" data-animation="default" data-duration="650" data-easing="ease" data-easing2="ease" role="banner" class="navigation w-nav">
       <div class="nav__container">
         <a href="index.html#" class="logo__link w-inline-block">
-          <img src="images/logo.png" loading="lazy" width="124" style="max-width: 75px;" data-w-id="1d7c51b5-4816-59bc-69e9-5c7e0e9a91b6" alt="" class="logo">
+          <img src="images/sticker.png" loading="lazy" width="124" style="max-width: 75px;" data-w-id="1d7c51b5-4816-59bc-69e9-5c7e0e9a91b6" alt="" class="logo">
         </a>
         <nav role="navigation" class="navigation__menu w-nav-menu">
           <a href="https://dexscreener.com/solana/ckitywu6mir9ru77zswynqwc318n3fsygmg9orxrroft" data-w-id="1d7c51b5-4816-59bc-69e9-5c7e0e9a91b8" class="nav__link is--1 w-nav-link" style="    font-family: 'Gulfsdisplay expanded', sans-serif;
@@ -445,12 +445,12 @@
           </div>
           <div class="hero__description">
             <p data-w-id="6058715b-73eb-fa49-fed2-bba6627c5687" class="paragraph">
-              <strong class="bold-text">JensenHuang</strong>
+              <strong class="bold-text"></strong>
             </p>
           </div>
           <div class="hero__content__top">
             <div class="heading__wrappers">
-              <h1 data-w-id="6058715b-73eb-fa49-fed2-bba6627c5696" class="heading__one">JensenHuang <br> </h1>
+              <h1 data-w-id="6058715b-73eb-fa49-fed2-bba6627c5696" class="heading__one"style="font-size 10px"> <br> </h1>
             </div>
 
           </div>
@@ -468,7 +468,7 @@
           <div class="hero__container">
             <div class="hero__description">
               <p class="paragraph">
-                <strong class="bold-text">JensenHuang</strong>
+                <strong class="bold-text"></strong>
               </p>
             </div>
 
@@ -479,7 +479,7 @@
                   </div>
               </div> -->
               <div class="heading__wrappers">
-                <h1 data-w-id="fbbc2dbc-a120-2a0d-5aaf-1154edc56a55" class="heading__one">JensenHuang </h1>
+                <h1 data-w-id="fbbc2dbc-a120-2a0d-5aaf-1154edc56a55" class="heading__one"> </h1>
               </div>
 
             </div>
